apps/headlamp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: headlamp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
